fix: clean up toc/JumpLinks styling

--- a/packages/documentation-framework/components/tableOfContents/tableOfContents.css
+++ b/packages/documentation-framework/components/tableOfContents/tableOfContents.css
@@ -2,8 +2,8 @@
   align-self: flex-start;
   position: sticky;
   width: calc(100% + var(--pf-v6-c-page__main-section--PaddingLeft) + var(--pf-v6-c-page__main-section--PaddingRight));
-  background-color: var(--pf-t--global--background--color--primary--default);
-  z-index: 501;
+  background-color: var(--pf-t--global--background--color--200);
+  z-index: var(--pf-t--global--z-index--sm);
   margin-block-start: calc(var(--pf-v6-c-page__main-section--PaddingTop) * -1);
   margin-block-end: var(--pf-t--global--spacer--md);
   margin-inline-start: calc(var(--pf-v6-c-page__main-section--PaddingLeft) * -1);
@@ -12,23 +12,24 @@
   padding-block-end: var(--pf-t--global--spacer--md);
   padding-inline-start: var(--pf-t--global--spacer--md);
   padding-inline-end: 0;
-/*   box-shadow: var(--pf-v6-global--BoxShadow--lg-bottom); */
+  box-shadow: var(--pf-t--global--box-shadow--lg--bottom);
 }
 
 .ws-toc.pf-m-expanded {
-/*   box-shadow: var(--pf-v6-global--BoxShadow--sm-bottom) */
+  box-shadow: var(--pf-t--global--box-shadow--sm--bottom)
 }
 
 /* Mobile jumplinks */
 @media (max-width: 1450px) {
   .ws-toc.pf-m-expanded .pf-v6-c-jump-links__main {
     max-height: 65vh;
+    overflow-y:scroll;
   }
 
   .ws-toc .pf-v6-c-jump-links__header {
     position: sticky;
     top: 0;
-    background-color: var(--pf-t--global--background--color--primary--default);
+    background-color: var(--pf-t--global--background--color--200);
     z-index: 2;
   }
 }
@@ -67,8 +68,8 @@
 .ws-toc-item .pf-v6-c-jump-links__link {
   position: relative;
   display: block;
-/*   color: var(--ws-toc-link--Color, var(--pf-v6-global--Color--300)); */
-/*   font-size: var(--pf-v6-global--FontSize--sm); */
+  color: var(--pf-v6-global--Color--300);
+  font-size: var(--pf-t--global--font--size--body--sm);
   margin: -4px 0;
 }
 
